# internal/gateways/http/place/update_place.go
@@ -14,21 +14,21 @@ import (
 // @Accept  json
 // @Produce  json
 // @Schemes http https
-// @Param place body usecase.SavePlaceInput true "Place data"
-// @Success 200 {object} domain.Place "Saved place"
+// @Param place body usecase.UpdatePlaceInput true "Place data"
+// @Success 200 {object} domain.Place "Updated place"
 // @Failure 400 "Bad Request"
 // @Failure 500 "Internal Server Error"
-// @Router /places [post]
+// @Router /places [put]
 func UpdatePlace(placeUseCase usecase.Place) gin.HandlerFunc {
 	return func(c *gin.Context) {
-		var placeInput usecase.SavePlaceInput
+		var placeInput usecase.UpdatePlaceInput
 		err := c.BindJSON(&placeInput)
 		if err != nil {
 			c.AbortWithStatusJSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 			return
 		}
 
-		place, err := placeUseCase.SavePlace(c, placeInput)
+		place, err := placeUseCase.UpdatePlace(c, placeInput)
 		if err != nil {
 			c.AbortWithStatusJSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 			return
