# internal/gateways/http/tag/tag.go
@@ -9,6 +9,6 @@ func SetupHandlers(r *gin.RouterGroup, cases usecase.Cases) {
 	placeGroup := r.Group("places").Group("tags")
 	placeGroup.POST("", CreateTag(cases.Tag))
 	placeGroup.GET("", GetAllTags(cases.Tag))
-	placeGroup.PUT(":id", UpdateTag(cases.Tag))
+	placeGroup.PUT("", UpdateTag(cases.Tag))
 	placeGroup.DELETE(":id", DeleteTag(cases.Tag))
 }
